Fixed about revosthsava z-index

--- a/css/revostava.css
+++ b/css/revostava.css
@@ -72,7 +72,6 @@ h1 {
   line-height: 80px;
   letter-spacing: -0.08em;
   color: #ff7722;
-  z-index: 1000;
   /* text-shadow: 10px 10px 70px#000000; */
 }
 
